# secrules_parsing

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  renovate.json  requirements.txt  secrules.tx  secrules_parser.py
.github/workflows/: codeql-analysis.yml  pypi-release.yml  test.yml
secrules_parsing/: parser.py
src/secrules_parsing/: __init__.py  cli.py  parser.py  resources.py
src/secrules_parsing/classes/: action.py  collection.py  operator.py  secrule.py  variable.py
src/secrules_parsing/exceptions/: Parser.py
src/secrules_parsing/model/: secrules.tx
tests/: conftest.py  test_actions.py  test_api.py  test_conftest_examples.py  test_directives.py  test_lib.py  test_operators.py
