[tool.poetry]
name = "secrules-parsing"
version = "0.2.3"
description = "ModSecurity DSL Parser package using textX"
authors = [
    "Felipe Zipitria <felipe.zipitria@owasp.org>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/coreruleset/secrules_parsing"
repository = "https://github.com/coreruleset/secrules_parsing"
documentation = "https://github.com/coreruleset/secrules_parsing"

keywords = ["secrule", "modsecurity", "parser", "textX"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "secrules_parsing", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/coreruleset/secrules_parsing/issues"

# Requirements
[tool.poetry.dependencies]
python = ">=3.7,<4.0"
textX = "^2.3.0"
importlib-metadata = "^4.11.3"

[tool.poetry.scripts]
secrules-parser = 'secrules_parsing.cli:run'

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
ppretty = "^1.3"
python-semantic-release = "^7.27.0"
toml = "^0.10.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

